# lcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  codebook.toml  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
cmd/: lcp.go
internal/api/: client.go  request.go  request_test.go
internal/api/applemusic/: api.go  applemusic.go  diff.go  diff_test.go  playlists.go  recent.go  songs.go
internal/api/github/: github.go  repos.go
internal/api/jellyfin/: api.go  jellyfin.go  recent.go
internal/api/steam/: achievements.go  games.go  steam.go
internal/apis/: client.go  request.go
internal/auth/: bearer.go  cors.go
internal/cache/: cache.go  endpoint.go  error.go  errors.go  storage.go
internal/health/: health.go
internal/images/: blurhash.go  cache.go  hash.go
internal/logger/: log.go  operation.go
internal/middleware/: log.go
internal/secrets/: secrets.go
internal/tasks/: tasks.go
internal/util/: cors.go  error.go  url.go  url_test.go
pkg/cache/: cache.go
pkg/lcp/: fetch.go  health.go  models.go  playlists.go
pkg/models/: applemusic.go  github.go  steam.go  strava.go
pkg/secrets/: secrets.go
pkg/strava/: activities.go  tokens.go
scripts/appletokens/: README.md  auth.html  main.go
src/: health.rs  main.rs  metrics.rs  resp.rs  reval.rs
src/github/: cache.rs  mod.rs  repos.rs  update.rs
src/steam/: achievements.rs  cache.rs  games.rs  mod.rs  update.rs
src/strava/: activities.rs  cache.rs  challenge.rs  event.rs  map.rs  mod.rs  token.rs
src/vercel/: projects.rs
(+52 files in other folders)
