[package]
name = "lcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.37.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sentry = "0.34.0"
serde = "1.0.151"
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.3"
